force-app/main/default/objects/TraderSelectionSetting__c/TraderSelectionSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>斡旋不動産会社自動選定</label>
</CustomObject>