force-app/main/default/objects/TraderSelectionSetting__c/fields/AccountSendNotificationBatchableCount__c.field-meta.xml
<CustomField>
    <fullName>AccountSendNotificationBatchableCount__c</fullName>
    <label>不動産斡旋依頼通知実行バッチサイズ</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>