force-app/main/default/objects/TraderSelectionSetting__c/fields/AlertMessageToDoText__c.field-meta.xml
<CustomField>
    <fullName>AlertMessageToDoText__c</fullName>
    <label>アラートメッセージToDoテキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>