force-app/main/default/objects/TraderSelectionSetting__c/fields/ApexErrorEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>ApexErrorEmailTemplate__c</fullName>
    <label>APEX異常時通知テンプレートID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>