force-app/main/default/objects/TraderSelectionSetting__c/fields/ApplicationWhenCheckErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ApplicationWhenCheckErrorMessage__c</fullName>
    <label>申請時チェックエラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>