force-app/main/default/objects/TraderSelectionSetting__c/fields/ChatterTargetUserId__c.field-meta.xml
<CustomField>
    <fullName>ChatterTargetUserId__c</fullName>
    <label>ChatterグループID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>