force-app/main/default/objects/TraderSelectionSetting__c/fields/ChatterTextBody__c.field-meta.xml
<CustomField>
    <fullName>ChatterTextBody__c</fullName>
    <label>Chatterテキスト</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>