force-app/main/default/objects/TraderSelectionSetting__c/fields/DisplayInputEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>DisplayInputEventErrorMessage__c</fullName>
    <label>入力不正エラーメッセージ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>