force-app/main/default/objects/TraderSelectionSetting__c/fields/GetMediationRequestEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>GetMediationRequestEventErrorMessage__c</fullName>
    <label>画面初期表示エラーメッセージ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>