force-app/main/default/objects/TraderSelectionSetting__c/fields/MediationRequestAutoProcessName__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestAutoProcessName__c</fullName>
    <label>斡旋依頼自動登録名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>