force-app/main/default/objects/TraderSelectionSetting__c/fields/MediationRequestDeleteEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestDeleteEventErrorMessage__c</fullName>
    <label>斡旋依頼削除処理イベントエラーメッセージ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>