force-app/main/default/objects/TraderSelectionSetting__c/fields/MediationRequestEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestEventErrorMessage__c</fullName>
    <label>斡旋依頼イベントエラーメッセージ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>