force-app/main/default/objects/TraderSelectionSetting__c/fields/MediationRequestManualWorkName__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestManualWorkName__c</fullName>
    <label>斡旋依頼手動登録名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>