force-app/main/default/objects/TraderSelectionSetting__c/fields/MediationRequestsStopCause__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestsStopCause__c</fullName>
    <label>斡旋依頼停止理由テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>