force-app/main/default/objects/TraderSelectionSetting__c/fields/MediationRequestUpdateEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestUpdateEventErrorMessage__c</fullName>
    <label>斡旋依頼更新処理イベントエラーメッセージ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>