force-app/main/default/objects/TraderSelectionSetting__c/fields/NotificationErrorEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>NotificationErrorEmailTemplate__c</fullName>
    <label>通知処理失敗メールテンプレートID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>