force-app/main/default/objects/TraderSelectionSetting__c/fields/NotificationMethodChatter__c.field-meta.xml
<CustomField>
    <fullName>NotificationMethodChatter__c</fullName>
    <label>自動通知方法_Chatter</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>