force-app/main/default/objects/TraderSelectionSetting__c/fields/NotificationMethodEmail__c.field-meta.xml
<CustomField>
    <fullName>NotificationMethodEmail__c</fullName>
    <label>自動通知方法_メール</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>