force-app/main/default/objects/TraderSelectionSetting__c/fields/RecordTypeNameTrader__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeNameTrader__c</fullName>
    <label>レコードタイプ名不動産会社</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>