force-app/main/default/objects/TraderSelectionSetting__c/fields/SelectionResultContract__c.field-meta.xml
<CustomField>
    <fullName>SelectionResultContract__c</fullName>
    <label>選定結果_成約</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>