force-app/main/default/objects/TraderSelectionSetting__c/fields/SelectionResultLostOrder__c.field-meta.xml
<CustomField>
    <fullName>SelectionResultLostOrder__c</fullName>
    <label>選定結果_失注</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>