force-app/main/default/objects/TraderSelectionSetting__c/fields/SelectionResultRequesting__c.field-meta.xml
<CustomField>
    <fullName>SelectionResultRequesting__c</fullName>
    <label>選定結果_依頼中</label>
    <length>255</length>
    <type>Text</type>
</CustomField>