force-app/main/default/objects/TraderSelectionSetting__c/fields/SendPossibleEndTimeHour__c.field-meta.xml
<CustomField>
    <fullName>SendPossibleEndTimeHour__c</fullName>
    <label>送信可能終了時間_時</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>