force-app/main/default/objects/TraderSelectionSetting__c/fields/SendPossibleEndTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>SendPossibleEndTimeMinutes__c</fullName>
    <label>送信可能終了時間_分</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>