force-app/main/default/objects/TraderSelectionSetting__c/fields/SendPossibleStartTimeHour__c.field-meta.xml
<CustomField>
    <fullName>SendPossibleStartTimeHour__c</fullName>
    <label>送信可能開始時間_時</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>