force-app/main/default/objects/TraderSelectionSetting__c/fields/SendPossibleStartTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>SendPossibleStartTimeMinutes__c</fullName>
    <label>送信可能開始時間_分</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>