force-app/main/default/objects/TraderSelectionSetting__c/fields/SendTaskAutoProcessCompleteMessage__c.field-meta.xml
<CustomField>
    <fullName>SendTaskAutoProcessCompleteMessage__c</fullName>
    <label>TODO自動斡旋完了コメント</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>