force-app/main/default/objects/TraderSelectionSetting__c/fields/SendTaskAutoProcessCompleteSubject__c.field-meta.xml
<CustomField>
    <fullName>SendTaskAutoProcessCompleteSubject__c</fullName>
    <label>TODO自動斡旋完了件名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>