force-app/main/default/objects/TraderSelectionSetting__c/fields/SendTaskAutoProcessErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SendTaskAutoProcessErrorMessage__c</fullName>
    <label>TODO自動斡旋エラーコメント</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>