force-app/main/default/objects/TraderSelectionSetting__c/fields/SendTaskAutoProcessErrorSubject__c.field-meta.xml
<CustomField>
    <fullName>SendTaskAutoProcessErrorSubject__c</fullName>
    <label>TODO自動斡旋エラー件名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>