force-app/main/default/objects/TraderSelectionSetting__c/fields/SendTaskManualWorkRequestMessage__c.field-meta.xml
<CustomField>
    <fullName>SendTaskManualWorkRequestMessage__c</fullName>
    <label>TODO手動斡旋通知コメント</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>