force-app/main/default/objects/TraderSelectionSetting__c/fields/SendTaskManualWorkRequestSubject__c.field-meta.xml
<CustomField>
    <fullName>SendTaskManualWorkRequestSubject__c</fullName>
    <label>TODO手動斡旋通知件名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>