force-app/main/default/objects/TraderSelectionSetting__c/fields/SobjectTypeAccount__c.field-meta.xml
<CustomField>
    <fullName>SobjectTypeAccount__c</fullName>
    <label>オブジェクトタイプ取引先</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>