force-app/main/default/objects/TraderSelectionSetting__c/fields/StopCauseDesiredAgency__c.field-meta.xml
<CustomField>
    <fullName>StopCauseDesiredAgency__c</fullName>
    <label>斡旋依頼停止理由_希望不動産会社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>