force-app/main/default/objects/TraderSelectionSetting__c/fields/StopCauseErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>StopCauseErrorMessage__c</fullName>
    <label>斡旋依頼停止理由_申請時エラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>