force-app/main/default/objects/TraderSelectionSetting__c/fields/StopCauseIsAutoMediationRequest__c.field-meta.xml
<CustomField>
    <fullName>StopCauseIsAutoMediationRequest__c</fullName>
    <label>斡旋依頼停止理由_斡旋依頼自動対応不可フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>