force-app/main/default/objects/TraderSelectionSetting__c/fields/StopCauseToSNTComment__c.field-meta.xml
<CustomField>
    <fullName>StopCauseToSNTComment__c</fullName>
    <label>斡旋依頼停止理由_SNT連絡事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>