force-app/main/default/objects/TraderSelectionSetting__c/fields/TaskErrorPriority__c.field-meta.xml
<CustomField>
    <fullName>TaskErrorPriority__c</fullName>
    <label>TODOエラー通知_優先度</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>