force-app/main/default/objects/TraderSelectionSetting__c/fields/TaskErrorStatus__c.field-meta.xml
<CustomField>
    <fullName>TaskErrorStatus__c</fullName>
    <label>TODOエラー通知_ステータス</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>