force-app/main/default/objects/TraderSelectionSetting__c/fields/TaskErrorSubtype__c.field-meta.xml
<CustomField>
    <fullName>TaskErrorSubtype__c</fullName>
    <label>TODOエラー通知_サブ種別</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>