force-app/main/default/objects/TraderSelectionSetting__c/fields/TaskMediationRequestNotNoticenotSubject__c.field-meta.xml
<CustomField>
    <fullName>TaskMediationRequestNotNoticenotSubject__c</fullName>
    <label>TODO斡旋依頼通知未設定_件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>