force-app/main/default/objects/TraderSelectionSetting__c/fields/TaskMediationRequestNotNoticenotText__c.field-meta.xml
<CustomField>
    <fullName>TaskMediationRequestNotNoticenotText__c</fullName>
    <label>TODO斡旋依頼通知未設定_本文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>