force-app/main/default/objects/TraderSelectionSetting__c/fields/TaskPriority__c.field-meta.xml
<CustomField>
    <fullName>TaskPriority__c</fullName>
    <label>TODO通知_優先度</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>