force-app/main/default/objects/TraderSelectionSetting__c/fields/TaskStatus__c.field-meta.xml
<CustomField>
    <fullName>TaskStatus__c</fullName>
    <label>TODO通知_ステータス</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>