force-app/main/default/objects/TraderSelectionSetting__c/fields/TaskSubtype__c.field-meta.xml
<CustomField>
    <fullName>TaskSubtype__c</fullName>
    <label>TODO通知_サブ種別</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>